--- a/mypkg-1/package.xml
+++ b/mypkg-1/package.xml
@@ -25,7 +25,7 @@
   <!-- Author tags are optional, multiple are allowed, one per tag -->
   <!-- Authors do not have to be maintainers, but could be -->
   <!-- Example: -->
-  <!-- <author email="s17C1075CB@s.chibakoudai.jp">Hirotaka Sugiura</author> -->
+  <!-- <author email="s17C1075CB@s.chibakoudai.jp", "ryuichiueda@gmail.com">Hirotaka Sugiura, Ryuichi Ueda</author> -->
 
 
   <!-- The *depend tags are used to specify dependencies -->
